--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
     "concurrently": "^9.0.1"
   },
   "scripts": {
-    "start": "concurrently \"npm run start --prefix backend\" \"npm run dev --prefix frontend\""
+    "start": "concurrently \"npm run start:dev --prefix backend\" \"npm run dev --prefix frontend\""
   }
 }
